infrastructure/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    #cert-manager.io/cluster-issuer: letsencrypt-production
    #traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
  - host: "longhorn.192-168-10-62.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
